<resources>
    <string name="app_name">HI_20172</string>
    <string name="title_remember_me">Tự động đăng nhập</string>
    <string name="title_login">Đăng nhập</string>
    <string name="title_register">Đăng ký</string>
    <string name="title_slash">\t/\t</string>
    <string name="action_forgot_password">Quên mật khẩu</string>
    <string name="title_pass_word">Mật khẩu</string>
    <string name="title_confirm_pass_word">Xác nhận mật khẩu</string>
    <string name="title_phone_or_email">Email hoặc số điện thoại</string>
    <string name="search_here">Tìm kiếm ở đây</string>
    <string name="title_user_info">Thông tin người dùng</string>
    <string name="user_name">Họ tên: Nguyễn Thị Thu Giang</string>
    <string name="user_email">Email: co_giang_van_tue@gmail.com</string>
    <string name="user_type">Loại tài khoản: Tình nguyện viên</string>
    <string name="title_language">Ngôn ngữ</string>
    <string name="language_vi">Tiếng Việt</string>
    <string name="title_choose_language">Chọn ngôn ngữ</string>
    <string name="language_en">English</string>
    <string name="start_spray">Bắt đầu tưới</string>
    <string name="cancel">Dừng tưới</string>
    <string name="distance">Khoảng cách ~ </string>
    <string name="time">Thời gian đi ~ </string>
    <string name="clear">Xóa tất cả</string>
    <string name="title_comment">Nhập phản hồi</string>
    <string name="title_send_comment">Gửi</string>
    <string name="sent_comment">Đã gửi phản hồi</string>
    <string name="title_history">Lịch sử cá nhân</string>
    <string name="provided_water">Đã tưới cây</string>
    <string name="has_id">có id</string>
    <string name="luong_nuoc">lượng nước</string>
    <string name="ml">ml</string>
    <string name="tree_name">Tên cây</string>
    <string name="tree_status">Mức độ thiếu nước</string>
    <string name="title_guide">Hướng dẫn sử dụng</string>
    <string name="title_guide_1">- Để tưới nhanh chọn vào biểu tượng chọn nhanh trên màn hình, hệ thống sẽ tự động chọn cây, số lượng cây,  nguồn nước và gợi ý đường đi. </string>
    <string name="title_guide_2">- Nếu muốn tự mình tưới, vui lòng chọn vào biểu tượng cây muốn tưới, sau đó ấn vào chữ "1 điểm dừng" hoặc chọn vào biểu tượng chỉ đường ở góc trái màn hình, hệ thống sẽ gợi ý đường đi đến nguồn nước và đến cây đã chọn.</string>
    <string name="title_guide_3">- Có thể chọn nhiều cây trong 1 lần tưới. </string>
    <string name="title_guide_4">- Để xem thông tin chi tiết cây, vui lòng chọn cây, khi đó ở phía trên cây đã chọn hiện button tên cây, click vào button đó thông tin chi tiết cây sẽ hiện ra.</string>

</resources>
