<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/title_user_info"
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_user2"
            />
        <item
            android:title="@string/title_language"
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            />
        <item
            android:title="@string/title_history"
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            />
        <item
            android:title="Hướng dẫn sử dụng"
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_guide"
            />
    </group>
</menu>
