<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/dp_30"
            android:layout_gravity="center"
            android:src="@drawable/co_giang_van_tue"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150" />
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_25"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"/>
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/sp_20"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"/>
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_20"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>