<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/title_choose_language"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:checked="true"
                android:gravity="left"
                android:layoutDirection="rtl"
                android:text="@string/language_vi"
                android:textSize="@dimen/sp_30" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:gravity="left"
                android:layoutDirection="rtl"
                android:text="@string/language_en"
                android:textSize="@dimen/sp_30" />
        </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>