<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.TreeDetailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_phone_or_email"
                android:paddingEnd="@dimen/dp_1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_1"
                android:paddingStart="@dimen/dp_10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_pass_word"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/dp_1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_1"
                android:paddingStart="@dimen/dp_10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_confirm_pass_word"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/dp_1"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_1"
                android:paddingStart="@dimen/dp_10" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_view_register_from_register_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="@dimen/dp_10"
            android:text="@string/title_register"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_20">

            <TextView
                android:id="@+id/text_view_login_from_register_act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/title_login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textStyle="italic|bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>