<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/text_view_history_time"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_2"
            android:orientation="horizontal">

            <TextView
                android:gravity="right"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@string/provided_water"
                android:textSize="@dimen/sp_10"
                android:textStyle="italic" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="Hoa hồng"
                android:id="@+id/text_view_history_tree_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@string/has_id"
                android:textSize="@dimen/sp_10"
                android:textStyle="italic" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="3"
                android:id="@+id/text_view_history_tree_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@string/luong_nuoc"
                android:textSize="@dimen/sp_10"
                android:textStyle="italic" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="200"
                android:id="@+id/text_view_history_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_8"
                android:text="@string/ml"
                android:textSize="@dimen/sp_10"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>